--- a/src/components/account/account.css
+++ b/src/components/account/account.css
@@ -1,118 +1,158 @@
+@import url(../../styles/main.css);
+
+body {
+  padding: 50px;
+}
+
+/* ----------------------------------------- */
+
 .account {
   display: inline-flex;
   flex-direction: column;
+  justify-content: center;
   width: 100%;
 
   h3 {
     padding: 15px 0 15px 30px;
     font-size: var(--fontSize22);
   }
+
 }
 
+/* -------------------------------------- */
+/*             총 금액 표시 영역             */
+/* -------------------------------------- */
+
 .account__show-total--Container {
-  display: flex;
-  width: 90%;
-  height: 23dvh;
   border-radius: 10px;
   background-color: var(--blue-200);
   color: var(--white-fa);
 }
 
 .account__show--wrapper {
-  width: 100%;
+  display: flex;
+  position: relative;
   font-size: var(--fontSize18);
 
-  h4 {
-    display: inline-block;
+  & h4 {
     margin: 1rem;
   }
 
-  button {
-    width: 20px;
-    margin-top: 1.5rem;
+  & summary {
+    margin-top: 1.1rem;
+    list-style: none;
+    transform: scale(80%);
   }
 }
 
-.account__total--wrapper {
-  display: flex;
-  position: relative;
-  align-items: end;
-  background-color: green;
-}
-
-.account__total-cost {
-  position: absolute;
-  top: 80px;
-  left: -120px;
-  background-color: red;
-}
-
-details summary {
-  list-style: none;
-}
-
-summary::-webkit-details-marker {
-  display: none;
-}
-
+/* 통화 단위 */
 .account__change-units--list {
   display: flex;
   position: absolute;
-  flex-direction: row;
-  top: 1rem;
+  top:1rem;
+  left: 8rem;
+  background-color: var(--white-fa);
+  z-index: 9999;
 
-  li {
-    list-style: none;
-  }
-
-  button {
-    padding: 4px 10px;
-    border: 1px solid var(--gray-100);
-
+  & li {
+    border: 1px solid var(--gray-400);
+    color: var(--black-200);
+    
     &:hover,
     &:focus {
-      background-color: var(--blue-200);
+      background-color : var(--blue-200);
       color: var(--white-fa);
-      font-weight: var(--bold);
+      font-weight: var(--bold);  
+    }
+  }
+  
+  & button {
+    padding: 5px 10px;
+    transform: translateY(-2px); /* 버튼내 텍스트 미세 조절 */
+    font-size: var(--fontSize12);
+    font-weight: var(--bold);
+  }
+}
+
+/* 총 금액 */
+.account__total-cost--wrapper {
+  display: flex;
+  
+  & h4 {
+    display: flex;
+    margin: 0 1rem 1rem auto;
+    font-size: var(--fontSize28);
+
+    & span {
+      padding: 0 10px;
+      font-size: var(--fontSize22);
+      transform: translateY(5px);
+  }
+  }
+}
+
+
+/* -------------------------------------- */
+/*            항목과 금액 등록 영역            */
+/* -------------------------------------- */
+
+.account__register--container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.3rem;
+  width: 100%;
+  margin-top: 1.3rem;
+}
+
+.account__register--costRow {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  width: inherit;
+
+  & label {
+    width: 60px;
+    text-align: center;
+    font-size: var(--fontSize16);
+    font-weight: var(--semiBold);
+    color: var(--black-200);    
+  }
+
+  & input {
+    flex: 1;
+    padding: 0.5rem;
+    border: 1px solid var(--gray-400);
+    border-radius: 5px;
+    color: var(--balck-200);
+
+    &::placeholder {
+      color: var(--gray-300);
     }
   }
 }
 
-/* }
-
-.account__show-total--Container {
-  width: 100%;
-  max-height: 120px;
+.account__register--button {
   background-color: var(--blue-200);
-  color: var(--white-fa);
-  border-radius: 10px;
-  padding: 1rem 1.9rem;
-}
-
-.account__show-total--Container {
-  font-size: var(--fontSize28);
-}
-
-.account__currency-exchange--btn {
+  padding: 10px 0;
+  width: 100%;
   border: none;
-  padding: 0;
+  border-radius: 5px;
+  color: var(--white-fa);
+  font-weight: var(--bold);
+  cursor: pointer;
 }
 
-.account__total--wrapper {
-  display: flex;
-  justify-content: end;
+/* -------------------------------------- */
+/*             금액 항목 테이블               */
+/* -------------------------------------- */
 
+.account__output-table {
+  background-color: violet;
+  margin-top: 1.3rem;
+  /* 모바일 테이블 항목 생략*/
+  & .account__method,
+    .account__modify,
+    .account__delete {
+      display: none;
+    }
 }
-
-.account__total-cost {
-  
-  font-size: var(--fontSize28);
-  font-weight: var(--semiBold);
-}
-
-.account__output-table table {
-  border: 1px solid green;
-}
-.account__output-table td {
-  border: 1px solid blue;
-} */
