feat : 환율 컴포넌트 재조정

--- a/src/components/exchange-rate/exchange-rate.html
+++ b/src/components/exchange-rate/exchange-rate.html
@@ -10,10 +10,7 @@
   <body>
     <article class="exchange__form">
       <h3 id="exchange-title" class="exchange-form__title">환율</h3>
-      <div
-        class="exchange-form__input-box"
-        role="group"
-      >
+      <div class="exchange-form__input-box" role="group">
         <div
           class="exchange-form__currency-select exchange-form__currency-select--custom"
         >
