--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,8 +1,8 @@
 @layer theme, demo, reset;
-@import "./common/base.css" layer(base);
-@import "./common/reset.css" layer(reset);
-@import "./common/theme.css" layer(theme);
+@import './common/base.css' layer(base);
+@import './common/reset.css' layer(reset);
+@import './common/theme.css' layer(theme);
 
-@import "../components/atomComponents/link/link.css";
-@import "../components/atomComponents/button/button.css";
-@import "../components/atomComponents/form/form.css";
+@import '../components/atomComponents/link/link.css';
+@import '../components/atomComponents/button/button.css';
+@import '../components/atomComponents/form/form.css';
