--- a/src/components/account/account.css
+++ b/src/components/account/account.css
@@ -1,9 +1,5 @@
 @import url(../../styles/main.css);
 
-body {
-  padding: 50px;
-}
-
 /* ----------------------------------------- */
 
 .account {
@@ -16,7 +12,6 @@ body {
     padding: 15px 0 15px 30px;
     font-size: var(--fontSize22);
   }
-
 }
 
 /* -------------------------------------- */
@@ -49,7 +44,7 @@ body {
 .account__change-units--list {
   display: flex;
   position: absolute;
-  top:1rem;
+  top: 1rem;
   left: 8rem;
   background-color: var(--white-fa);
   z-index: 9999;
@@ -57,15 +52,15 @@ body {
   & li {
     border: 1px solid var(--gray-400);
     color: var(--black-200);
-    
+
     &:hover,
     &:focus {
-      background-color : var(--blue-200);
+      background-color: var(--blue-200);
       color: var(--white-fa);
-      font-weight: var(--bold);  
+      font-weight: var(--bold);
     }
   }
-  
+
   & button {
     padding: 5px 10px;
     transform: translateY(-2px); /* 버튼내 텍스트 미세 조절 */
@@ -77,7 +72,7 @@ body {
 /* 총 금액 */
 .account__total-cost--wrapper {
   display: flex;
-  
+
   & h4 {
     display: flex;
     margin: 0 1rem 1rem auto;
@@ -87,10 +82,9 @@ body {
       padding: 0 10px;
       font-size: var(--fontSize22);
       transform: translateY(5px);
-  }
+    }
   }
 }
-
 
 /* -------------------------------------- */
 /*            항목과 금액 등록 영역            */
@@ -115,7 +109,7 @@ body {
     text-align: center;
     font-size: var(--fontSize16);
     font-weight: var(--semiBold);
-    color: var(--black-200);    
+    color: var(--black-200);
   }
 
   & input {
@@ -147,12 +141,12 @@ body {
 /* -------------------------------------- */
 
 .account__output-table {
-  background-color: violet;
+  /* background-color: violet; */
   margin-top: 1.3rem;
   /* 모바일 테이블 항목 생략*/
   & .account__method,
-    .account__modify,
-    .account__delete {
-      display: none;
-    }
+  .account__modify,
+  .account__delete {
+    display: none;
+  }
 }
