style :  가계부 페이지 반응형 - 반응형 css 코드작성

--- a/src/pages/account-page/account-page.css
+++ b/src/pages/account-page/account-page.css
@@ -140,7 +140,6 @@ body {
 }
 
 .account__register--btns-container{
-  background-color: pink;
   align-content: space-around;
   flex-basis: 40%;
   height: inherit;
@@ -148,7 +147,6 @@ body {
 }
 
 .account__payment-form {
-  background-color: greenyellow;
   display: flex;
   border: none;
   margin: 0;
@@ -204,6 +202,7 @@ body {
 
   & th {
     padding-bottom:1rem;
+    font-size: var(--fontSize16);
   }
 
   /* 테이블 열간격 비율 */
@@ -238,23 +237,14 @@ body {
   & tr{
     padding: 16px 0;
     text-align: center;
-  }
-
-  & input[type="date"] {
-    background-color: yellow;
+    font-size: var(--fontSize14);
   }
 
   & input[type="number"] {
-    background-color: green;
     color: var(--blue-200);
   }
 
-  & input[type="text"] {
-    background-color: orange;
-    text-align: center;
-  }
-
-  & select {
+   & select {
     padding: 0;
     text-align: center;
     border: 0;
@@ -265,5 +255,99 @@ body {
     gap: 0.8rem;
   }
 }
+/* -------------------------------- */
+/* 반응형 */
+/* -------------------------------- */
 
-/* 반응형 미디어쿼리 */
+/* 기본 (모바일, min-width: 375px 기준) */
+@media (max-width: 767px) {
+  .account__register--form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 1.3rem;
+  }
+
+  .account__register--btns-container{
+    padding-left: 0;
+  }
+
+  .account__payment-form {
+    display: none;
+  }
+
+  .account__register--button{
+    margin-top: 1.8rem;
+  }
+  .account__register-cost {
+    &:nth-child(1) {
+      display: none;
+    }
+  }
+
+  .account__output-table {
+    /*  테이블 숨김 */
+    & th:nth-child(5),
+    & td:nth-child(5),
+    & th:nth-child(6),
+    & td:nth-child(6) {
+      display: none;
+    }
+
+     /* 테이블 열간격 비율 변경 */
+    & th:nth-child(1),
+    & td:nth-child(1),
+    & th:nth-child(4),
+    & td:nth-child(4) {
+    width: 15%
+    }
+    & th:nth-child(2),
+    & td:nth-child(2) {
+      width: 20%;
+    }
+    /* 항목 (가장 긴 열 간격) */
+    & th:nth-child(3),
+    & td:nth-child(3) {
+      padding-left: 1em;
+      width: 50%;
+    }
+  }
+
+}
+
+/* 태블릿 (768px ~ 1027.98px) */
+@media (min-width: 768px) and (max-width: 1027.98px) {
+   .account__register-cost {
+    &:nth-child(1) {
+      display: none;
+    }
+  }
+
+  .account__output-table {
+    /*  테이블 숨김 */
+    & th:nth-child(5),
+    & td:nth-child(5),
+    & th:nth-child(6),
+    & td:nth-child(6) {
+      display: none;
+    }
+
+     /* 테이블 열간격 비율 변경 */
+    & th:nth-child(1),
+    & td:nth-child(1),
+    & th:nth-child(4),
+    & td:nth-child(4) {
+    width: 15%
+    }
+    & th:nth-child(2),
+    & td:nth-child(2) {
+      width: 20%;
+    }
+    /* 항목 (가장 긴 열 간격) */
+    & th:nth-child(3),
+    & td:nth-child(3) {
+      padding-left: 1em;
+      width: 50%;
+    }
+  }
+}
