--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   max-width: 300px;
+  min-height: 70vh;
   background-color: var(--white-fa);
   border-radius: 20px 0 0 20px;
 }
@@ -82,6 +83,8 @@
     margin: 10px 15px;
     border: 1px solid var(--gray111);
     border-radius: 10px;
+    min-width: 40vw;
+    min-height: 0;
   }
 
   /* 오버레이: 네비 열릴 때만 활성화 */
