refactor : pc 레이아웃 변경

--- a/src/styles/index-page.css
+++ b/src/styles/index-page.css
@@ -104,17 +104,21 @@ body {
     justify-content: center;
 
     .page-layout {
+      overflow: scroll;
+      max-height: 70vh;
       background: var(--white);
       border-radius: 0 15px 15px 15px;
-      max-width: 980px;
-      translate: 50px 100px;
+      max-width: 60vw;
+      translate: 0 10vw;
     }
     .main-layout {
       padding-inline: 40px;
     }
     .nav__wrapper {
       position: fixed;
-      translate: -540px 100px;
+      top: 10vw;
+      left: 20vw;
+      translate: -100% 0;
     }
   }
 }
