--- a/src/components/suggest/suggest.css
+++ b/src/components/suggest/suggest.css
@@ -2,16 +2,58 @@
 .suggest-section {
   position: relative;
 
+  .slide__button--wrapper {
+    .slide__button {
+      position: absolute;
+      translate: 0 -50%;
+      top: 50%;
+      z-index: 999;
+      padding: 200px 15px;
+      border-radius: 10px;
+      opacity: 0;
+      transition: opacity 0.2s ease-in-out;
+
+      &:focus {
+        outline: 0;
+      }
+      &:focus-visible {
+        opacity: 1;
+        outline: 2px solid #000;
+      }
+
+      &:hover,
+      &:focus {
+        opacity: 1;
+      }
+    }
+    .slide__button--prev {
+      left: 0;
+    }
+    .slide__button--next {
+      right: 0;
+    }
+  }
+  .suggest__banner {
+    overflow: hidden;
+  }
   .suggest__list {
     display: flex;
+    transition: transform 0.4s ease-in-out;
   }
   .suggest__list--item {
+    overflow: hidden;
     flex-shrink: 0;
+    width: 100%;
     position: relative;
 
     source,
     img {
       aspect-ratio: 5 / 2;
+      transition: scale 0.5s ease-in-out;
+
+      &:hover {
+        scale: 1.01;
+      }
     }
   }
   .suggest__info {
@@ -46,36 +88,6 @@
       &:focus {
         color: var(--blue-200);
       }
-    }
-  }
-  .slide__button--wrapper {
-    .slide__button {
-      position: absolute;
-      translate: 0 -50%;
-      top: 50%;
-      padding: 200px 15px;
-      border-radius: 10px;
-      opacity: 0;
-      transition: opacity 0.2s ease-in-out;
-
-      &:focus {
-        outline: 0;
-      }
-      &:focus-visible {
-        opacity: 1;
-        outline: 2px solid #000;
-      }
-
-      &:hover,
-      &:focus {
-        opacity: 1;
-      }
-    }
-    .slide__button--prev {
-      left: 0;
-    }
-    .slide__button--next {
-      right: 0;
     }
   }
 }
