style : em단위 사용 코드 var로수정 -160번째 줄  .account__total-cost--wrapper h4  폰트 사이즈 2.3em-> var로 수정

--- a/src/components/account/account.css
+++ b/src/components/account/account.css
@@ -1,5 +1,9 @@
 @import url(../../styles/main.css);
 
+:root {
+  --fontsize36:2.3em;
+}
+
 /* ----------------------------------------- */
 
 h3 {
@@ -157,7 +161,7 @@ h3 {
     flex-wrap: wrap;
     align-content: end;
     margin: 0 2rem 2rem auto;
-    font-size: 2.3em;
+    font-size: var(--fontsize36);
 
     & span {
       padding: 0 10px;
