--- a/src/components/suggest/suggest.html
+++ b/src/components/suggest/suggest.html
@@ -84,7 +84,7 @@
                 />
                 <img
                   src="../../assets/images/suggest/london_1x.jpg"
-                  srcset="../../assets/images/suggest/london_2x.jpg"
+                  srcset="../../assets/images/suggest/london_2x.jpg 2x"
                   alt="런던"
                   loading="lazy"
                   decoding="async"
@@ -93,8 +93,21 @@
               <figcaption class="suggest__info">
                 <strong class="suggest__title">LONDON</strong>
                 <div class="suggest__button--wrapper">
-                  <a href="#" class="suggest__button">보기</a>
-                  <button type="button" class="suggest__button">추가</button>
+                  <a
+                    href="#"
+                    class="suggest__button"
+                    aria-hidden="false"
+                    tabindex="0"
+                    >보기</a
+                  >
+                  <button
+                    type="button"
+                    class="suggest__button"
+                    aria-hidden="false"
+                    tabindex="0"
+                  >
+                    추가
+                  </button>
                 </div>
               </figcaption>
             </figure>
@@ -118,7 +131,7 @@
                 />
                 <img
                   src="../../assets/images/suggest/tokyo_1x.jpg"
-                  srcset="../../assets/images/suggest/tokyo_2x.jpg"
+                  srcset="../../assets/images/suggest/tokyo_2x.jpg 2x"
                   alt="도쿄"
                   loading="lazy"
                   decoding="async"
@@ -127,8 +140,21 @@
               <figcaption class="suggest__info">
                 <strong class="suggest__title">TOKYO</strong>
                 <div class="suggest__button--wrapper">
-                  <a href="#" class="suggest__button">보기</a>
-                  <button type="button" class="suggest__button">추가</button>
+                  <a
+                    href="#"
+                    class="suggest__button"
+                    aria-hidden="true"
+                    tabindex="-1"
+                    >보기</a
+                  >
+                  <button
+                    type="button"
+                    class="suggest__button"
+                    aria-hidden="true"
+                    tabindex="-1"
+                  >
+                    추가
+                  </button>
                 </div>
               </figcaption>
             </figure>
@@ -152,7 +178,7 @@
                 />
                 <img
                   src="../../assets/images/suggest/ny_1x.jpg"
-                  srcset="../../assets/images/suggest/ny_2x.jpg"
+                  srcset="../../assets/images/suggest/ny_2x.jpg 2x"
                   alt="뉴욕"
                   loading="lazy"
                   decoding="async"
@@ -161,8 +187,21 @@
               <figcaption class="suggest__info">
                 <strong class="suggest__title">NEW YORK</strong>
                 <div class="suggest__button--wrapper">
-                  <a href="#" class="suggest__button">보기</a>
-                  <button type="button" class="suggest__button">추가</button>
+                  <a
+                    href="#"
+                    class="suggest__button"
+                    aria-hidden="true"
+                    tabindex="-1"
+                    >보기</a
+                  >
+                  <button
+                    type="button"
+                    class="suggest__button"
+                    aria-hidden="true"
+                    tabindex="-1"
+                  >
+                    추가
+                  </button>
                 </div>
               </figcaption>
             </figure>
@@ -186,7 +225,7 @@
                 />
                 <img
                   src="../../assets/images/suggest/paris_1x.jpg"
-                  srcset="../../assets/images/suggest/paris_2x.jpg"
+                  srcset="../../assets/images/suggest/paris_2x.jpg 2x"
                   alt="파리"
                   loading="lazy"
                   decoding="async"
@@ -195,8 +234,21 @@
               <figcaption class="suggest__info">
                 <strong class="suggest__title">PARIS</strong>
                 <div class="suggest__button--wrapper">
-                  <a href="#" class="suggest__button">보기</a>
-                  <button type="button" class="suggest__button">추가</button>
+                  <a
+                    href="#"
+                    class="suggest__button"
+                    aria-hidden="true"
+                    tabindex="-1"
+                    >보기</a
+                  >
+                  <button
+                    type="button"
+                    class="suggest__button"
+                    aria-hidden="true"
+                    tabindex="-1"
+                  >
+                    추가
+                  </button>
                 </div>
               </figcaption>
             </figure>
