--- a/src/components/suggest/suggest.css
+++ b/src/components/suggest/suggest.css
@@ -1,14 +1,19 @@
 @import url(../../styles/common/theme.css);
+
+:root {
+  --fontSize40: 2.5rem;
+  --fontSize50: 3.125rem;
+}
 .suggest-section {
   position: relative;
 
   .slide__button--wrapper {
     .slide__button {
       position: absolute;
-      translate: 0 -50%;
-      top: 50%;
+      top: 0;
+      bottom: 0;
       z-index: 999;
-      padding: 200px 15px;
+      padding: 0 15px;
       border-radius: 10px;
       opacity: 0;
       transition: opacity 0.2s ease-in-out;
@@ -43,8 +48,9 @@
   .suggest__list--item {
     overflow: hidden;
     flex-shrink: 0;
-    width: 100%;
     position: relative;
+    width: 100%;
+    border-radius: 15px;
 
     source,
     img {
@@ -64,7 +70,7 @@
 
     .suggest__title {
       color: var(--white-fa);
-      font-size: 2.5rem;
+      font-size: var(--fontSize40);
       font-weight: var(--black);
     }
 
@@ -101,9 +107,6 @@
       }
     }
     .suggest__info {
-      position: absolute;
-      top: 50%;
-      left: 5%;
       translate: 0px -50%;
     }
   }
@@ -119,7 +122,7 @@
     }
     .suggest__info {
       .suggest__title {
-        font-size: 3.125rem;
+        font-size: var(--fontSize50);
       }
     }
   }
